   POST and PUT methods. Reported by Randy Layman.
 - If the status is SUCCESS_NO_CONTENT or SUCCESS_RESET_CONTENT, the response entity is 
   not sent back to the client by HTTP server connectors.
 - Special characters in Template instance could conflict with special internal characters 
   (Regex). They are now quoted properly.

[API changes]
 - Removed all deprecated classes and methods.
 - Replaced inner Series.Entry interface by the Parameter classes as the extra flexibility
   is not required and complicated the API and the Javadocs understanding.
 - Replaced Series and AbstractSeries by a single Series class.
 - Added a setMatchingMode() method on Template.
 - Added new constructor to Route taking a custom instance of Template.
 - Added protected getTargetRef(Req, Resp) and rewrite(Repr) methods to Redirector to allow 
   more customization.
 - Added "port" property to the ClientInfo class.
 - Added methods on Dispatcher for each main method (get, put, post, delete, options and head) taking an instance of Reference. Following a remark from Alex Combs.
 - Deprecated the trace() method from Dispatcher.
  
[Enhancements] 
 - Added support for the IDENT protocol (see RFC 1413) in order to log more info about users.
   This is especially useful when a pool of computers shares the same IP address.
 - Updated Jetty to version 6.1 RC2.
 
1.0 beta 23 (2006-12-19)
[Bugs fixed]
 - Fixed several documentation typos. Reported by John D. Mitchell and Peter Murray.
 - Fixed issue with "sub-tagged" Language metadata (like "en-us"), sub-tag comparison must
   ignore the case. Reported by Jeff Walter and Andrew Barnes. Contributed by Thierry Boileau.
 - Fixed issues in parsing of "accept*" HTTP headers. Added unit tests. Reported by AJ Barnes and Jeff Walter.
 - Fixed potential NPE in HostScorer.
 - Fixed RDF media type from "application/rdf-xml" to "application/rdf+xml". Reported by Aldo Bucchi.