@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Thu Dec 21 19:40:57 CET 2006
-build.number=567
+#Fri Dec 22 12:26:33 CET 2006
+build.number=569
