@@ -98,9 +98,7 @@ A search engine dedicated to the <a
 				style="border: 0px solid ; width: 90px; height: 30px;"
 				src="http://www.restlet.org/images/powered" alt="Powered by Restlet"></a></td>
 			<td colspan="1" rowspan="1">&copy; 2006 <a target="_top"
-				href="http://www.noelios.com">Noelios Consulting</a>&nbsp;- <a
-				href="mailto:contact@noelios.com?subject=REST%20Search%20Engine">Suggest
-			a site</a>&nbsp;- <a href="sites">Indexed sites</a></td>
+				href="http://www.noelios.com">Noelios Consulting</a>&nbsp;- <a href="sites">Indexed sites</a></td>
 		</tr>
 		<tr>
 		</tr>
